[package]
name = "tokio-socks5"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
log = "0.4"
tokio = "0.1"
futures = "0.1"
tokio-io = "0.1"
env_logger = "0.5"
trust-dns = { git = "http://github.com/bluejekyll/trust-dns.git", rev = "2f22e5a", default-features = false}

[dev-dependencies]
curl = "0.4"
